Project 2 Attempt 2/metadataPackage_1568322651712/objects/Quiz__c.object
<CustomObject>
    <label>Quiz</label>
    <nameField>
        <label>Quiz Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quizzes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Attempts_Made__c</fullName>
        <label>Attempts Made</label>
        <summaryFilterItems>
            <field>AccountQuiz__c.Score__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>AccountQuiz__c.Quiz__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Avg_Score__c</fullName>
        <formula>IF( Attempts_Made__c &gt;0, TotalScore__c / Attempts_Made__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questions</label>
        <referenceTo>Questions__c</referenceTo>
        <relationshipLabel>Quizzes</relationshipLabel>
        <relationshipName>Quizzes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalScore__c</fullName>
        <label>Total Score</label>
        <summarizedField>AccountQuiz__c.Score__c</summarizedField>
        <summaryForeignKey>AccountQuiz__c.Quiz__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <validationRules>
        <fullName>First_Capital</fullName>
        <active>true</active>
        <errorConditionFormula>LEFT(UPPER( Name ),1) &lt;&gt; LEFT( Name ,1)</errorConditionFormula>
        <errorMessage>First letter not capitalized.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quiz_Name_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(Name, &quot;[A-Z]{1}[a-z]{4,50}&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The name of the quiz must start with a capital letter and also must have 5 to 50 characters.;</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>